buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }

    dependencies {
        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.14'
    }

    ext {
        grpc_version = '1.34.0'
        protobuf_version = '3.14.0'
        javax_annotation_version = '1.3.1'
        lombok_version = '1.18.16'
        junit_version = '5.7.0'
        jackson_version = '2.12.0'
        commons_lang_version = '3.11'
        slf4j_version = '1.7.30'
        log4j2_version = '2.14.0'
    }
}

allprojects {
    repositories {
        mavenCentral()
        jcenter()
    }

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'idea'
}

subprojects {
    group 'games.mythical'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    dependencies {
        implementation group: 'org.projectlombok', name: 'lombok', version: "${lombok_version}"

        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombok_version}"

        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: "${junit_version}"

        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombok_version}"
    }
}